# awkward

./: .all-contributorsrc  .atom-build.yml  .clang-format  .clang-tidy  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DifferentiableArray-for-JAX.py  Dockerfile  Doxyfile  MANIFEST.in  QUICKSTART.md  README-pypi.md  README.md  VERSION_INFO  arrow.py  azure-pipelines.yml  bench.json  cibuildwheel.toml  codecov.yml  compile_commands.json  constraints.json  cuda-build.sh  cuda-setup.py  ex.json  format_json.py  fuzz_test.yml  gen.py  indirect_symbols.txt  inputs.json  juliapkg.json  (+36 more)
awkward-cpp/: .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  VERSION_INFO  kernel-specification.yml  pyproject.toml  setup.cfg  setup.py
awkward-cpp/cpp-headers/awkward/: LayoutBuilder.h
awkward-cpp/docs/: Doxyfile  index.md
awkward-cpp/tests-cpp/: CMakeLists.txt  test_1542-growable-buffer.cpp
dependent-project/: CMakeLists.txt  README.md  awkward1  dependent.cpp  minimal.cpp  test-python.py  tests.py
header-only/: CMakeLists.txt  README.md
header-only/awkward/: LayoutBuilder.h  utils.h
header-only/tests/: CMakeLists.txt  test_1494-layout-builder.cpp  test_1542-array-builder.cpp  test_1542-growable-buffer.cpp  test_1560-builder-options.cpp  test_3091-layout-builder-is-valid.cpp  test_4087-bitmasked-growablebuffer.cpp  test_4088-layoutbuilder-form-fixes.cpp  test_xxxx-layout-builder-is-valid.cpp
src/: Raw.cpp  (+2 more)
src/cuda-kernels/: CMakeLists.txt  MANIFEST.in  allocators.cu  awkward_BitMaskedArray_to_ByteMaskedArray.cu  awkward_ListArray_num.cu  awkward_ListArray_validity.cu  awkward_RegularArray_num.cu  cuda-utils.cu  cupy_kernels.py  getitem.cu  identities.cpp  identities.cu  kernel-utils.cu  manual_awkward_BitMaskedArray_to_ByteMaskedArray.cu  manual_awkward_BitMaskedArray_to_IndexedOptionArray.cu  manual_awkward_ListArray_num.cu  operations.cu  setup.py  utils.cu
tests/: CMakeLists.txt  __init__.py  conftest.py  kernels.py  test_0001-refcount.py  test_0002-minimal-listarray.py  test_0002_minimal_listarray.py  test_0002_v2-minimal-listarray.py  test_0004-design-surrogate-key.py  test_0005-surrogate-key-in-numba.py  test_0006-deep-iteration.py  test_0006_deep_iteration.py  test_0006_v2-deep-iteration.py  test_0008-slices-and-getitem.py  test_0008_slices_and_getitem.py  test_0008_v2-slices-and-getitem.py  test_0009-identity-and-getitem.py  test_0011-listarray.py  test_0011_listarray.py  test_0011_v2-listarray.py  test_0013-error-handling-struct.py  test_0013_error_handling_struct.py  test_0013_v2-error-handling-struct.py  test_0014-finish-up-getitem.py  test_0014_finish_up_getitem.py  test_0014_v2-finish-up-getitem.py  test_0015-finish-up-getitem-in-numba.py  test_0016-finish-getitem-for-rawarray.cpp  test_0018-fromiter-fillable.py  test_0018_fromiter_fillable.py  test_0019-use-json-library.cpp  test_0019-use-json-library.py  test_0019_use_json_library.py  test_0020-support-unsigned-indexes.py  test_0020_support_unsigned_indexes.py  test_0020_v2-support-unsigned-indexes.py  test_0021-emptyarray.py  test_0021_emptyarray.py  test_0021_v2-emptyarray.py  test_0022-fillablearray-in-numba.py  (+1093 more)
tests-cpp/: CMakeLists.txt  test-growable-buffer.cpp  test-layout-builder.cpp  test-listoffset-of-numpy.cpp  test_1494-layout-builder.cpp  test_1542-array-builder.cpp  test_1542-growable-buffer.cpp  test_1560-builder-options.cpp
tests/cpu-kernels/: dummy1.cpp
tests/dependent-project/: CMakeLists.txt  dependent.cpp  tests.py
tests/libawkward/: dummy2.cpp
tests/properties/: conftest.py
tests/samples/: __init__.py  array_enum_test_data.avro  array_string_test_data.avro  array_test_data.avro  awkward1-bytemaskedarray.pkl  awkward1-emptyarray.pkl  awkward1-indexedoptionarray.pkl  awkward1-listoffsetarray.pkl  awkward1-numpyarray.pkl  awkward1-partitioned-numpyarray.pkl  awkward1-recordarray-tuple.pkl  awkward1-recordarray.pkl  awkward1-regulararray.pkl  awkward1-strings.pkl  awkward1-unionarray.pkl  awkward1-unmaskedarray.pkl  bool_test_data.avro  bytes_test_data.avro  complex-nested.json  double_test_data.avro  enum_null_test_data.avro  enum_test_data.avro  fixed_test_data.avro  float_test_data.avro  int_null_test_data.avro  int_string_null_test_data.avro  int_test_data.avro  list-depths-records-list.parquet  list-depths-records.parquet  list-depths-simple.parquet  list-depths-strings.parquet  list-depths.parquet  list-lengths.parquet  long_test_data.avro  nonnullable-depths.parquet  null_test_data.avro  nullable-depths.parquet  nullable-levels.parquet  nullable-list-depths-records-list.parquet  nullable-list-depths-records.parquet  (+20 more)
tests/v2/: test_0002-minimal-listarray.py  test_0006-deep-iteration.py  test_0008-slices-and-getitem.py  test_0011-listarray.py  test_0013-error-handling-struct.py  test_0014-finish-up-getitem.py  test_0018-fromiter-fillable.py  test_0019-use-json-library.py  test_0020-support-unsigned-indexes.py  test_0021-emptyarray.py  test_0023-regular-array.py  test_0024-use-regular-array.py  test_0025-record-array.py  test_0028-add-dressed-types.py  test_0032-replace-dressedtype.py  test_0038-emptyarray-astype.py  test_0046-start-indexedarray.py  test_0049-distinguish-record-and-recordarray-behaviors.py  test_0057-introducing-forms.py  test_0057-virtual-array.py  test_0070-argmin-and-argmax.py  test_0072-fillna-operation.py  test_0074-argsort-and-sort.py  test_0077-zip-operation.py  test_0078-argcross-and-cross.py  test_0079-argchoose-and-choose.py  test_0080-flatpandas-multiindex-rows-and-columns.py  test_0084-start-unionarray.py  test_0086-nep13-ufunc.py  test_0089-numpy-functions.py  test_0093-simplify-uniontypes-and-optiontypes.py  test_0107-assign-fields-to-records.py  test_0111-jagged-and-masked-getitem.py  test_0114-rpad-operation.py  test_0115-generic-reducer-operation.py  test_0118-numba-cpointers.py  test_0119-numexpr-and-broadcast-arrays.py  test_0124-strings-in-numba.py  test_0127-tomask-operation.py  test_0127b-tomask-operation-numba.py  (+194 more)
(+4257 files in other folders)
