[build-system]
requires = [
    "hatchling>=1.10.0",
    "hatch-requirements-txt>=0.2.0"
]
build-backend = "hatchling.build"

[project]
name = "awkward"
description = "Manipulate JSON-like data with NumPy-like idioms."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.7"
authors = [
    { name = "Jim Pivarski", email = "pivarski@princeton.edu" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies"
]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]
test = ["requirements-test.txt"]

[project.entry-points.numba_extensions]
init = "awkward.numba:_register"

[project.urls]
"Bug Tracker" = "https://github.com/scikit-hep/awkward-1.0/issues"
"Chat" = "https://gitter.im/Scikit-HEP/awkward-array"
"Discussions" = "https://github.com/scikit-hep/awkward-1.0/discussions"
"Documentation" = "https://awkward-array.org"
"Homepage" = "https://github.com/scikit-hep/awkward-1.0"
"Releases" = "https://github.com/scikit-hep/awkward-1.0/releases"
"Source Code" = "https://github.com/scikit-hep/awkward-1.0"

[tool.hatch.version]
path = "src/awkward/__init__.py"

[tool.hatch.build]
packages = ["src/awkward"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = [
    "src",
    "pybind11",
    "rapidjson",
    "studies",
]
addopts = [
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:the imp module is deprecated in favour of importlib:DeprecationWarning",
    "ignore:The NumPy module was reloaded:UserWarning",
    "ignore:.*np\\.MachAr.*:DeprecationWarning",
    "ignore:module 'sre_.*' is deprecated:DeprecationWarning",
]
log_cli_level = "info"

[tool.isort]
profile = "black"

[tool.pylint.master]
py-version = "3.7"
jobs = "0"
ignore-paths = [
    "src/awkward/_typeparser/generated_parser.py",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.messages_control]
enable = [
    "useless-suppression",
]
disable = [
    "abstract-method",
    "arguments-differ",
    "attribute-defined-outside-init",
    "bad-super-call",
    "broad-except",
    "cell-var-from-loop",
    "chained-comparison",
    "consider-using-f-string",
    "consider-using-max-builtin",
    "consider-using-min-builtin",
    "duplicate-code",
    "exec-used",
    "fixme",
    "global-statement",
    "import-error",
    "import-outside-toplevel",
    "inconsistent-return-statements",
    "invalid-class-object",
    "invalid-name",
    "invalid-unary-operand-type",
    "keyword-arg-before-vararg",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-break",
    "no-else-raise",
    "no-else-return",
    "no-member",
    "no-name-in-module",
    "no-self-use",
    "no-value-for-parameter",
    "property-with-parameters",
    "protected-access",
    "raise-missing-from",
    "redefined-builtin",
    "redefined-outer-name",
    "simplifiable-if-expression",
    "super-init-not-called",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-function-args",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "unbalanced-tuple-unpacking",
    "undefined-loop-variable",
    "ungrouped-imports",
    "unidiomatic-typecheck",
    "unnecessary-comprehension",
    "unnecessary-lambda",
    "unreachable",
    "unsubscriptable-object",
    "unused-argument",
    "unused-import",
    "unused-variable",
    "use-a-generator",
    "use-implicit-booleaness-not-len",
    "wrong-import-order",
    "wrong-import-position",
]
